--- a/cliente/package.json
+++ b/cliente/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-cropperjs": "^0.1.5",
     "concurrently": "^3.6.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
